modified:   .gitignore 	modified:   app.py 	new file:   insights.html:Zone.Identifier 	new file:   main.py 	new file:   main.py:Zone.Identifier 	new file:   mcp_logic.py 	new file:   mcp_logic.py:Zone.Identifier 	new file:   service_account.json:Zone.Identifier 	modified:   static/icons/energy_page2.png 	new file:   static/icons/government.png 	deleted:    static/icons/health.jpg 	new file:   static/icons/health.png 	new file:   static/icons/va_page.png 	modified:   templates/categories.html 	modified:   templates/insights.html 	modified:   templates/modules.html 	modified:   templates/oops.html 	renamed:    templates/qa_chat.html -> templates/qa_chat_operations.html 	new file:   templates/qa_chat_projects.html 	new file:   templates/voice_agent.html

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -58,9 +58,9 @@
             <div class="col d-flex justify-content-center" style="padding: 10px 4px;">
                 <a href="{{ url_for('dashboard', category='public_services') }}" style="text-decoration:none;">
                     <div class="card dashboard-tile">
-                        <img src="{{ url_for('static', filename='icons/publicservices.png') }}"
+                        <img src="{{ url_for('static', filename='icons/government.png') }}"
                              alt="Public Services" class="category-icon" style="padding-bottom:2px;">
-			<h3><b>Public Services</b></h3>
+			<h3><b>Government</b></h3>
                     </div>
                 </a>
             </div>
@@ -80,7 +80,7 @@
             <div class="col d-flex justify-content-center" style="padding: 10px 4px;">
                 <a href="{{ url_for('dashboard', category='health') }}" style="text-decoration:none;">
                     <div class="card dashboard-tile">
-                        <img src="{{ url_for('static', filename='icons/health.jpg') }}"
+                        <img src="{{ url_for('static', filename='icons/health.png') }}"
                              alt="Health" class="category-icon" style="padding-bottom:1px;">
 			<h3><b>Health</b></h5>
                     </div>
