--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="roll-level-security" checked>
                 <label class="form-check-label" for="roll-level-security">
-                    Enable Roll Level Security
+                    Enable Role Level Security
                 </label>
             </div>
 
