updated visualization+logic for projects and operations chatbot

--- a/static/style.css
+++ b/static/style.css
@@ -84,7 +84,7 @@ body, html {
 
 /* Text colors as shown in PPT */
 .dark-blue-text {
-    color: #2504c9 !important; /* Dark blue color */
+    color: #034EA2  !important; /* Dark blue color */
 }
 
 .gray-text {
